day 4 exercise, changed fonts

--- a/student_bio.html
+++ b/student_bio.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Me</title>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis">
+
     <style>
+
     h2 {
         background-color: black;
         color: white;
@@ -22,11 +26,17 @@
         background-color: rgba(255, 255, 0, 0.288);
         float: left;
         margin: 10px;
-       width:30%;
-       border: 1px solid green;
+        width:30%;
+        border: 1px solid green;
     }
 
-
+    .paragraph {
+        font-size: 23px;
+        font-family: 'Dosis', serif;
+        line-height: 100%;
+        letter-spacing: 0ch;
+        font-weight: 700;
+    }
 
     </style>
 </head>
